BetterDiscord Dark Mode fixes for Emoji/Emote menu

--- a/Metro_for_Discord.theme.css
+++ b/Metro_for_Discord.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Metro_for_Discord","description":"Based on Microsoft's Modern Design Language, aka 'Metro'. Github: github.com/TakosThings","author":"Tako","version":"2.13.1"}*//{}
+//META{"name":"Metro_for_Discord","description":"Based on Microsoft's Modern Design Language, aka 'Metro'. Github: github.com/TakosThings","author":"Tako","version":"2.13.2"}*//{}
 
 /* Icons used in this theme by https://icons8.com */
 
@@ -22,7 +22,7 @@
   width: 100%;
   height: 18px;
   background: var(--b1);
-  content: "Metro For Discord v2.13.1";
+  content: "Metro For Discord v2.13.2";
   color: #FFF;
   font-size: 10px;
   text-align: center;
@@ -1347,6 +1347,7 @@ button.btn.btn-settings:active{
     width: 40px;
     height: 40px;
     margin: 0;
+    border-bottom: 0;
 }
 .emoji-picker .categories .item:hover{
     background-color: var(--b4);
@@ -1406,6 +1407,34 @@ button.btn.btn-settings:active{
     border: 1px solid rgba(255,255,255,.4);
     border-radius: 0;
     box-shadow: none;
+}
+/* BD dark mode fixes */
+.bda-dark #bda-qem{
+    background-color: var(--b1);
+    border-bottom: 1px solid var(--accent) !important;
+}
+.bda-dark #bda-qem button{
+    background-color: transparent;
+    border-left: 0;
+    box-shadow: none;
+}
+.bda-dark #bda-qem-favourite-container,
+.bda-dark #bda-qem-twitch-container,
+.bda-dark .emoji-picker,
+.bda-dark .emoji-picker .category{
+    background-color: var(--b2);
+}
+.bda-dark .emoji-picker .header .search-bar{
+    background-color: transparent;
+}
+.bda-dark .emoji-picker .scroller .emoji-item{
+    background-size: contain;
+}
+.bda-dark .emoji-picker .scroller .emoji-item.selected{
+    background-color: var(--b3);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 /* Frequently used category icon */
